--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,13 @@ endif()
 set (SOURCEFILES 
   main.cpp
   src/GlfwPlugin.cpp
+  src/GlfwWindow.cpp
+  src/GlfwWindowFactory.cpp
 )
 
 set (HEADERFILES
-
+  src/GlfwWindow.h
+  src/GlfwWindowFactory.h
 )
 
 source_group("Header Files" FILES ${HEADERFILES})
@@ -165,8 +168,7 @@ add_dependencies( GLFW_App glfw)
 
 add_definitions(-DPLUGINPATH="${CMAKE_INSTALL_PREFIX}/..")
 add_executable ( test_glfw test/test.cpp )
-target_link_libraries(test_glfw ${GLFW_LIBRARY} ${OPENGL_LIBRARIES} debug VRPlugind optimized VRPlugin ${LIBS_ALL})
-add_dependencies( test_glfw glfw)
+target_link_libraries(test_glfw debug VRPlugind optimized VRPlugin debug VRIndexd optimized VRIndex ${LIBS_ALL})
 
 SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
 SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
